force-app/main/default/objects/Work_Order__c/fields/Manufacturer_Model__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Model__c</fullName>
    <label>Manufacturer Model #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>