force-app/main/default/objects/Work_Order__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Formula-text field to determine the month and year of the work order, based off of the actual receipt date as required by Mosaic&apos;s RS template.</description>
    <formula>TEXT(MONTH(Arrival_Date__c)) + TEXT(YEAR(Arrival_Date__c))</formula>
    <label>Month</label>
    <type>Text</type>
</CustomField>