force-app/main/default/objects/Work_Order__c/fields/Motor_Failure_to_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Motor_Failure_to_Turnover__c</fullName>
    <label>Motor - Failure to Turnover</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Cracks/Wear - Worn Sheaves</fullName>
            </value>
            <value>
                <fullName>Failure to Start - Cable Damages</fullName>
            </value>
            <value>
                <fullName>Rotor Damage - Water Intrusion into the Windings</fullName>
            </value>
            <value>
                <fullName>Overheating - Potash Dust</fullName>
            </value>
            <value>
                <fullName>Overheating - Uneven Foundation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>