force-app/main/default/objects/Work_Order__c/fields/Motor_Short_Out_the_Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor_Short_Out_the_Motor__c</fullName>
    <label>Motor - Short Out the Motor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Over Current Drawn - Voltage Surge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>