force-app/main/default/objects/Work_Order__c/fields/MSDS__c.field-meta.xml
<CustomField>
    <fullName>MSDS__c</fullName>
    <label>MSDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>