force-app/main/default/objects/Work_Order__c/fields/Original_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Install_Date__c</fullName>
    <label>Original Install Date</label>
    <type>Date</type>
</CustomField>