force-app/main/default/objects/Work_Order__c/fields/Packing_Lack_of_Heat_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Packing_Lack_of_Heat_Transfer__c</fullName>
    <label>Packing - Lack of Heat Transfer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Overheating - Lack of Lubrication</fullName>
            </value>
            <value>
                <fullName>Overheating - Packing Improperly Installed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>