force-app/main/default/objects/Work_Order__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>Customer PO Number</description>
    <label>Customer PO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>