force-app/main/default/objects/Work_Order__c/fields/Previous_Job__c.field-meta.xml
<CustomField>
    <fullName>Previous_Job__c</fullName>
    <description>The previous job number.</description>
    <label>Previous Job #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>