force-app/main/default/objects/Work_Order__c/fields/Previously_at_Welco__c.field-meta.xml
<CustomField>
    <fullName>Previously_at_Welco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously at Welco</label>
    <type>Checkbox</type>
</CustomField>