force-app/main/default/objects/Work_Order__c/fields/Provided_Within_Target__c.field-meta.xml
<CustomField>
    <fullName>Provided_Within_Target__c</fullName>
    <formula>IF(
AND(
NOT(ISBLANK( Arrival_Date__c )),
ISBLANK(X4_5_Estimate_Actual_Completion__c)
),
null,
IF(
(X4_5_Estimate_Actual_Completion__c - Arrival_Date__c) &lt;= 6,
&apos;Y&apos;,
&apos;N&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provided Within Target</label>
    <type>Text</type>
</CustomField>