force-app/main/default/objects/Work_Order__c/fields/Purchase_Order_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the purchase order been received?</description>
    <label>4.1 Purchase Order Recieved</label>
    <type>Checkbox</type>
</CustomField>