force-app/main/default/objects/Work_Order__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Welco Estimate #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>