force-app/main/default/objects/Work_Order__c/fields/Quote_Provided_within_Target__c.field-meta.xml
<CustomField>
    <fullName>Quote_Provided_within_Target__c</fullName>
    <description>&quot;Y&quot; &lt;6 days
&quot;N&quot; &gt;6 days
&quot;Waiting on Quote&quot; -open work order, no quote yet</description>
    <label>Quote Provided within Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>