force-app/main/default/objects/Work_Order__c/fields/Reason_for_Late_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Late_Delivery__c</fullName>
    <description>Comments text box required by Mosaic&apos;s RS template</description>
    <label>Reason for Late Delivery</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>