force-app/main/default/objects/Work_Order__c/fields/Repair_Completed_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Completed_on_Time__c</fullName>
    <description>Text box noting if the repair was completed on time as required by Mosaic&apos;s RS template</description>
    <label>Repair Completed on Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>