force-app/main/default/objects/Work_Order__c/fields/Repair_Completion_on_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Completion_on_Time__c</fullName>
    <formula>IF(
OR(
(ISBLANK(Expected_Completion_Date__c)),
ISBLANK(Close_Date__c)
),
null,
IF(
( Close_Date__c - Expected_Completion_Date__c ) &lt;= 2,
&apos;Y&apos;,
&apos;N&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repair Completion on Time</label>
    <type>Text</type>
</CustomField>