force-app/main/default/objects/Work_Order__c/fields/Request_for_Quote__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Quote__c</fullName>
    <label>Request for Quote #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>