force-app/main/default/objects/Work_Order__c/fields/Sent_to_paint__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_paint__c</fullName>
    <description>Date the equipment was sent to paint</description>
    <label>Sent to paint</label>
    <type>Date</type>
</CustomField>