force-app/main/default/objects/Work_Order__c/fields/Service_Metric__c.field-meta.xml
<CustomField>
    <fullName>Service_Metric__c</fullName>
    <formula>TODAY() -  Arrival_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Metric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>