force-app/main/default/objects/Work_Order__c/fields/Shaft_Failure_to_Transmit_Power__c.field-meta.xml
<CustomField>
    <fullName>Shaft_Failure_to_Transmit_Power__c</fullName>
    <label>Shaft - Failure to Transmit Power</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Crack/Broken Keyway - Overloading</fullName>
            </value>
            <value>
                <fullName>Crack/Broken Shaft - Torsional Fatigue</fullName>
            </value>
            <value>
                <fullName>Cracking Wearing - Packing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>