force-app/main/default/objects/Work_Order__c/fields/Shaft_Sleeve_Failure_to_Protect_Shaft__c.field-meta.xml
<CustomField>
    <fullName>Shaft_Sleeve_Failure_to_Protect_Shaft__c</fullName>
    <label>Shaft Sleeve - Failure to Protect Shaft</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Cracking Wearing - Misalignment</fullName>
            </value>
            <value>
                <fullName>Excessive Leaking - Gland too Tight, Resulting in no Flow through Packing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>