force-app/main/default/objects/Work_Order__c/fields/Sharepoint_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Folder_ID__c</fullName>
    <description>This is a hidden field that contains the id of the sharepoint folder to be linked</description>
    <externalId>true</externalId>
    <label>Sharepoint Folder ID</label>
    <length>150</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>