force-app/main/default/objects/Work_Order__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Shop Assessment</fullName>
            </value>
            <value>
                <fullName>Reporting &amp; Quoting</fullName>
            </value>
            <value>
                <fullName>Confirmed/Shipped</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
                <isActive>false</isActive>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>Inside_Sales</fullName>
                <isActive>false</isActive>
                <label>Inside Sales</label>
            </value>
            <value>
                <fullName>Logistics / Shipping</fullName>
                <isActive>false</isActive>
                <label>Logistics / Shipping</label>
            </value>
            <value>
                <fullName>Waiting on Approval</fullName>
                <isActive>false</isActive>
                <label>Waiting on Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>