force-app/main/default/objects/Work_Order__c/fields/Stuffing_Box_Breach_of_Containment__c.field-meta.xml
<CustomField>
    <fullName>Stuffing_Box_Breach_of_Containment__c</fullName>
    <label>Stuffing Box - Breach of Containment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Excessive Leaking - Excessive Clearance at Bottom of Stuffing Box, Forcing Packing into Pumping</fullName>
            </value>
            <value>
                <fullName>Excessive Leaking - Dust in the Oil for Packing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>