force-app/main/default/objects/Work_Order__c/fields/Tag_ID__c.field-meta.xml
<CustomField>
    <fullName>Tag_ID__c</fullName>
    <description>Tag ID as requested on inspection report by Mosaic. Renamed to Tag ID to be more universal</description>
    <label>Tag ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>