force-app/main/default/objects/Work_Order__c/fields/Time_to_Approve_BusiDays__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Approve_BusiDays__c</fullName>
    <description>Formula calculated based off of actual date the customer approves/declines the PO from the actual date we sent the customer the Estimate/Quote, in business days</description>
    <formula>IF( 
NOT(ISBLANK(X5_2B_Actual_PO_Decline__c)),
CASE(MOD( X4_5_Estimate_Actual_Completion__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( X5_2B_Actual_PO_Decline__c - X4_5_Estimate_Actual_Completion__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( X5_2B_Actual_PO_Decline__c - X4_5_Estimate_Actual_Completion__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( X5_2B_Actual_PO_Decline__c - X4_5_Estimate_Actual_Completion__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( X5_2B_Actual_PO_Decline__c - X4_5_Estimate_Actual_Completion__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( X5_2B_Actual_PO_Decline__c - X4_5_Estimate_Actual_Completion__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( X5_2B_Actual_PO_Decline__c - X4_5_Estimate_Actual_Completion__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( X5_2B_Actual_PO_Decline__c - X4_5_Estimate_Actual_Completion__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( X5_2B_Actual_PO_Decline__c - X4_5_Estimate_Actual_Completion__c )/7)*5),


(IF(NOT(ISBLANK(X52AActualPOApproval__c)),
CASE(MOD( X4_5_Estimate_Actual_Completion__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( X52AActualPOApproval__c - X4_5_Estimate_Actual_Completion__c )/7)*5),


(IF(NOT(ISBLANK(X4_5_Estimate_Actual_Completion__c)),
CASE(MOD( X4_5_Estimate_Actual_Completion__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( TODAY() - X4_5_Estimate_Actual_Completion__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TODAY() - X4_5_Estimate_Actual_Completion__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TODAY() - X4_5_Estimate_Actual_Completion__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TODAY() - X4_5_Estimate_Actual_Completion__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TODAY() - X4_5_Estimate_Actual_Completion__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TODAY() - X4_5_Estimate_Actual_Completion__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TODAY() - X4_5_Estimate_Actual_Completion__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TODAY() - X4_5_Estimate_Actual_Completion__c )/7)*5),

null)
)
)))</formula>
    <label>Time to Approve (Business Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>