force-app/main/default/objects/Work_Order__c/fields/Time_to_Complete_Parts_Business_Days__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete_Parts_Business_Days__c</fullName>
    <description>Formula calculated based off of actual date we receive parts back from the 3rd party from the day we sent them out.</description>
    <formula>IF( 
NOT(ISBLANK(X6B_4_Parts_Received_Actual_Completion__c)), 

CASE(MOD(  X6B_2_Parts_Sent_Actual_Start__c - DATE(1985,6,24),7), 
0 , CASE( MOD( X6B_4_Parts_Received_Actual_Completion__c - X6B_2_Parts_Sent_Actual_Start__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( X6B_4_Parts_Received_Actual_Completion__c - X6B_2_Parts_Sent_Actual_Start__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( X6B_4_Parts_Received_Actual_Completion__c - X6B_2_Parts_Sent_Actual_Start__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( X6B_4_Parts_Received_Actual_Completion__c - X6B_2_Parts_Sent_Actual_Start__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( X6B_4_Parts_Received_Actual_Completion__c - X6B_2_Parts_Sent_Actual_Start__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( X6B_4_Parts_Received_Actual_Completion__c - X6B_2_Parts_Sent_Actual_Start__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( X6B_4_Parts_Received_Actual_Completion__c - X6B_2_Parts_Sent_Actual_Start__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( X6B_4_Parts_Received_Actual_Completion__c - X6B_2_Parts_Sent_Actual_Start__c )/7)*5), 

CASE(MOD( X6B_2_Parts_Sent_Actual_Start__c - DATE(1985,6,24),7), 
0 , CASE( MOD( TODAY() - X6B_2_Parts_Sent_Actual_Start__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
1 , CASE( MOD( TODAY() - X6B_2_Parts_Sent_Actual_Start__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
2 , CASE( MOD( TODAY() - X6B_2_Parts_Sent_Actual_Start__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
3 , CASE( MOD( TODAY() - X6B_2_Parts_Sent_Actual_Start__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
4 , CASE( MOD( TODAY() - X6B_2_Parts_Sent_Actual_Start__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
5 , CASE( MOD( TODAY() - X6B_2_Parts_Sent_Actual_Start__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
6 , CASE( MOD( TODAY() - X6B_2_Parts_Sent_Actual_Start__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
999) 
+ 
(FLOOR(( TODAY() - X6B_2_Parts_Sent_Actual_Start__c)/7)*5) 
)</formula>
    <label>Time to Complete Parts (Business Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>