force-app/main/default/objects/Work_Order__c/fields/Time_to_Quote__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Quote__c</fullName>
    <description>Formula (number) calculated based off of actual date Welco completed the quote from the actual date we started the quote, in business days

Examples for delays: waiting on drawings, customer information, etc.</description>
    <formula>IF(
NOT(ISBLANK(X4_5_Estimate_Actual_Completion__c)),

CASE(MOD(Arrival_Date__c-DATE(1985,6,24),7), 
  0, CASE(MOD(X4_5_Estimate_Actual_Completion__c-Arrival_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1, CASE(MOD(X4_5_Estimate_Actual_Completion__c-Arrival_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2, CASE(MOD(X4_5_Estimate_Actual_Completion__c-Arrival_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3, CASE(MOD(X4_5_Estimate_Actual_Completion__c-Arrival_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4, CASE(MOD(X4_5_Estimate_Actual_Completion__c-Arrival_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5, CASE(MOD(X4_5_Estimate_Actual_Completion__c-Arrival_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6, CASE(MOD(X4_5_Estimate_Actual_Completion__c-Arrival_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR((X4_5_Estimate_Actual_Completion__c-Arrival_Date__c)/7)*5),

IF(AND( ISBLANK(TEXT(CompleteandClose__c)),ISBLANK(X4_5_Estimate_Actual_Completion__c)),
CASE(MOD( Arrival_Date__c-DATE(1985,6,24),7), 
  0, CASE(MOD(TODAY()-Arrival_Date__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1, CASE(MOD(TODAY()-Arrival_Date__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2, CASE(MOD(TODAY()-Arrival_Date__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3, CASE(MOD(TODAY()-Arrival_Date__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4, CASE(MOD(TODAY()-Arrival_Date__c,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5, CASE(MOD(TODAY()-Arrival_Date__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6, CASE(MOD(TODAY()-Arrival_Date__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TODAY() - Arrival_Date__c)/7)*5), null)
)</formula>
    <label>Time to Quote (Business Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>