force-app/main/default/objects/Work_Order__c/fields/Time_to_Receive_Parts_BusiDays__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Receive_Parts_BusiDays__c</fullName>
    <description>Formula calculated based off of actual date we receive parts that were on order from the day we ordered them, in business days</description>
    <formula>IF(
NOT(ISBLANK(X6A_4_Parts_Received_Actual_Arrival__c)), 
CASE(MOD( X6A_2_Parts_Ordered_Actual_Start__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( X6A_4_Parts_Received_Actual_Arrival__c - X6A_2_Parts_Ordered_Actual_Start__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( X6A_4_Parts_Received_Actual_Arrival__c - X6A_2_Parts_Ordered_Actual_Start__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( X6A_4_Parts_Received_Actual_Arrival__c - X6A_2_Parts_Ordered_Actual_Start__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( X6A_4_Parts_Received_Actual_Arrival__c - X6A_2_Parts_Ordered_Actual_Start__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( X6A_4_Parts_Received_Actual_Arrival__c - X6A_2_Parts_Ordered_Actual_Start__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( X6A_4_Parts_Received_Actual_Arrival__c - X6A_2_Parts_Ordered_Actual_Start__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( X6A_4_Parts_Received_Actual_Arrival__c - X6A_2_Parts_Ordered_Actual_Start__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( X6A_4_Parts_Received_Actual_Arrival__c - X6A_2_Parts_Ordered_Actual_Start__c)/7)*5),

IF(
NOT(ISBLANK(X6A_2_Parts_Ordered_Actual_Start__c)),
CASE(MOD( X6A_2_Parts_Ordered_Actual_Start__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( TODAY() - X6A_2_Parts_Ordered_Actual_Start__c,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TODAY() - X6A_2_Parts_Ordered_Actual_Start__c,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TODAY() - X6A_2_Parts_Ordered_Actual_Start__c,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TODAY() - X6A_2_Parts_Ordered_Actual_Start__c,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TODAY() - X6A_2_Parts_Ordered_Actual_Start__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TODAY() - X6A_2_Parts_Ordered_Actual_Start__c,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TODAY() - X6A_2_Parts_Ordered_Actual_Start__c,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TODAY() - X6A_2_Parts_Ordered_Actual_Start__c )/7)*5),

null))</formula>
    <label>Time to Receive Parts (Business Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>