force-app/main/default/objects/Work_Order__c/fields/Unit_Actual_Scrap_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Actual_Scrap_Return_Date__c</fullName>
    <label>Scrap/Return Date</label>
    <type>Date</type>
</CustomField>