force-app/main/default/objects/Work_Order__c/fields/Unit_Expected_Receipt_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Expected_Receipt_Date__c</fullName>
    <label>(Unit) Expected Receipt Date</label>
    <type>Date</type>
</CustomField>