force-app/main/default/objects/Work_Order__c/fields/Unit_Paint_Color__c.field-meta.xml
<CustomField>
    <fullName>Unit_Paint_Color__c</fullName>
    <label>Unit Paint Color</label>
    <length>30</length>
    <type>Text</type>
</CustomField>