force-app/main/default/objects/Work_Order__c/fields/Unit_Revised_Expected_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Unit_Revised_Expected_Ship_Date__c</fullName>
    <label>(Unit) Revised Expected Completion Date</label>
    <type>Date</type>
</CustomField>