force-app/main/default/objects/Work_Order__c/fields/Warranty__c.field-meta.xml
<CustomField>
    <fullName>Warranty__c</fullName>
    <label>Warranty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit Covered Under Warranty</fullName>
            </value>
            <value>
                <fullName>Unit Not Covered Under Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>