force-app/main/default/objects/Work_Order__c/fields/Warranty_Comments__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Comments__c</fullName>
    <description>Warranty Comments text box as required by Mosaic&apos;s RS Template</description>
    <label>Warranty Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>