force-app/main/default/objects/Work_Order__c/fields/WarrantyMosaic__c.field-meta.xml
<CustomField>
    <fullName>WarrantyMosaic__c</fullName>
    <description>Warranty Text Field with Mosaic&apos;s required values that is based on the existing warranty picklist as required by Mosaic&apos;s RS Template</description>
    <formula>CASE( Warranty__c,
&quot;Unit Covered Under Warranty&quot;, &quot;Approved&quot;,
&quot;Unit Not Covered Under Warranty&quot;, &quot;Denied&quot;,
null)</formula>
    <label>Warranty</label>
    <type>Text</type>
</CustomField>