force-app/main/default/objects/Work_Order__c/fields/Welco_Item__c.field-meta.xml
<CustomField>
    <fullName>Welco_Item__c</fullName>
    <label>Welco Item #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>