force-app/main/default/objects/Work_Order__c/fields/Welco_Picking_Location__c.field-meta.xml
<CustomField>
    <fullName>Welco_Picking_Location__c</fullName>
    <label>Welco Picking Location #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>