force-app/main/default/objects/Work_Order__c/fields/X1_2_Received_Information_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>X1_2_Received_Information_from_Customer__c</fullName>
    <label>1.2 Received Information from Customer</label>
    <type>Date</type>
</CustomField>