force-app/main/default/objects/Work_Order__c/fields/X1_3_Additional_Information_from_Custome__c.field-meta.xml
<CustomField>
    <fullName>X1_3_Additional_Information_from_Custome__c</fullName>
    <inlineHelpText>State what information was requested from the customer.</inlineHelpText>
    <label>1.3 Additional Information from Customer</label>
    <type>TextArea</type>
</CustomField>