force-app/main/default/objects/Work_Order__c/fields/X1_Customer_RFQ_Number__c.field-meta.xml
<CustomField>
    <fullName>X1_Customer_RFQ_Number__c</fullName>
    <label>Customer RFQ Number</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>