force-app/main/default/objects/Work_Order__c/fields/X1_Drawings__c.field-meta.xml
<CustomField>
    <fullName>X1_Drawings__c</fullName>
    <label>1. Drawings</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drawings Requested</fullName>
            </value>
            <value>
                <fullName>Drawings Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>