force-app/main/default/objects/Work_Order__c/fields/X1_Request_Information_from_Customer__c.field-meta.xml
<CustomField>
    <fullName>X1_Request_Information_from_Customer__c</fullName>
    <inlineHelpText>Use these selections if you have requested additional information from the customer other than what was originally received.</inlineHelpText>
    <label>1. Request Information from Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Information from CustomerRequested</fullName>
                <label>Information from Customer Requested</label>
            </value>
            <value>
                <fullName>Information from CustomerReceived</fullName>
                <label>Information from Customer Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>