force-app/main/default/objects/Work_Order__c/fields/X2_1_Drawings_Requested_Expected__c.field-meta.xml
<CustomField>
    <fullName>X2_1_Drawings_Requested_Expected__c</fullName>
    <label>2.1 (Drawings Requested) Expected</label>
    <type>Date</type>
</CustomField>