force-app/main/default/objects/Work_Order__c/fields/X2_2_Drawings_Requested_Actual__c.field-meta.xml
<CustomField>
    <fullName>X2_2_Drawings_Requested_Actual__c</fullName>
    <label>1.1 Drawings Requested</label>
    <type>Date</type>
</CustomField>