force-app/main/default/objects/Work_Order__c/fields/X2_3_Drawings_Obtained_Expected__c.field-meta.xml
<CustomField>
    <fullName>X2_3_Drawings_Obtained_Expected__c</fullName>
    <label>2.3 (Drawings Obtained) Expected</label>
    <type>Date</type>
</CustomField>