force-app/main/default/objects/Work_Order__c/fields/X2_3_Report_Completion__c.field-meta.xml
<CustomField>
    <fullName>X2_3_Report_Completion__c</fullName>
    <label>2.3 Report Completion</label>
    <type>Date</type>
</CustomField>